# AI-Orchestrated_CAE_System_Test

./: README.md  first_prompt.txt  main.py  pyproject.toml  requirements.txt  step1_createGetPromptForGenAI.py  step2a_generate3DModel.py  step2b_convertObjToStl.py  step3_runCalc.py  step4_checkCFDOutput.py
cfd/: Allclean  Allrun  saveFig.py
cfd/0/: U  epsilon  k  nut  p
cfd/constant/: transportProperties
cfd/constant/triSurface/: outer.eMesh  outer.stl  outer_orig.stl
cfd/system/: blockMeshDict  controlDict  fvSolution  snappyHexMeshDict  snappyHexMeshDict.bp  surfaceFeaturesDict
