[project]
name = "ai-orchestrated-cae-system-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.8",
    "numpy>=2.4.2",
    "openai>=2.26.0",
    "pip>=26.0.1",
    "pyglet<2",
    "pyyaml>=6.0.3",
    "torch>=2.10.0",
    "trimesh>=4.11.3",
]
